fixed issue with data not showing up on page

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,19 +5,31 @@ header {
 	margin-top: 0;
 	border-bottom-style: dashed;
 	width: 100;
+	height: 30px;
 	color: lightgray;
+}
+h2 {
+	margin: 0;
+	width: 150px;
+	height: 30px;
+	text-align: center;
 }
 button {
 	color: black;
+	border-radius: 10px;
+	position: relative;
 }
 body {
 	margin-top: 0;
 	margin-left: 10%;
 	margin-right: 10%;
-	background-image: "img/corkboard.jpg";
+	background-image: url(/img/corkboard.jpg);
+}
+ul {
+	background-color: rgba(66, 21, 3, .5);
 }
 
 .website-links {
 	width: 50%;
-	height: 100%;
+	height: 80%;
 }
